syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Client";
package CecoChat.Contracts.Client;
import "client-message.proto";

service Send {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  ClientMessage message = 1;
}

message SendMessageResponse {
  int64 message_id = 1;
}
